deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookmyticket
spec:
  selector:
    app: bookmyticket
  ports:
    - port: 8000
      targetPort: 8000
