deployment/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bookmyticket
spec:
  rules:
    - host:
      http:
        paths:
          - path: /
            backend:
              serviceName: bookmyticket
              servicePort: 8000
